--- a/README
+++ b/README
@@ -9,4 +9,7 @@ $ rake db:migrate
 
 Grid based search of Google Places
 (currently in 100x100 grid, requiring 10,000 GooglePlaces API requests, and uses a subset of types)
-$ ruby places.rb
+$ rake scrape:google_places
+
+However, we may be using wwoz instead, to get more reliable locations
+$ rake scrape:wwoz
